--- a/module/Application/view/application/campaign/form.phtml
+++ b/module/Application/view/application/campaign/form.phtml
@@ -2,6 +2,25 @@
 $this->inlineScript()
     ->prependFile($this->basePath('/assets/js/pages/campaign.js'))
     ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/jquery-inputmask/jquery.inputmask.bundle.js'));
+
+$class = [];
+$inputs = ['name', 'period_start', 'period_final'];
+foreach($inputs as $key => $input)
+{
+    $class[$input] = [];
+
+    if ($this->formElementErrors($form->get($input)))
+    {
+        array_push($class[$input], 'error', 'focused');
+    }
+
+    if (! empty($form->get('id')->getValue()))
+    {
+        array_push($class[$input], 'focused');
+    }
+
+    $class[$input] = implode(' ', array_unique($class[$input]));
+}
 ?>
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -16,7 +35,7 @@ $this->inlineScript()
                 <div class="row clearfix">
                     <div class="col-sm-12">
                         <div class="form-group form-float">
-                            <div class="form-line<?php if ($this->formElementErrors($form->get('name'))) :?> focused error<?php endif;?>">
+                            <div class="form-line <?php echo $class['name'];?>">
                                 <?php echo $this->formElement($form->get('name')) . PHP_EOL;?>
                                 <?php echo $this->formLabel($form->get('name')) . PHP_EOL; ?>
                             </div>
@@ -31,7 +50,7 @@ $this->inlineScript()
                 <div class="row clearfix">
                     <div class="col-sm-6">
                         <div class="form-group form-float">
-                            <div class="form-line<?php if ($this->formElementErrors($form->get('period_start'))) :?> focused error<?php endif;?>">
+                            <div class="form-line <?php echo $class['period_start'];?>">
                                 <?php echo $this->formElement($form->get('period_start')) . PHP_EOL;?>
                                 <?php echo $this->formLabel($form->get('period_start')) . PHP_EOL; ?>
                             </div>
@@ -44,7 +63,7 @@ $this->inlineScript()
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group form-float">
-                            <div class="form-line<?php if ($this->formElementErrors($form->get('period_final'))) :?> focused error<?php endif;?>">
+                            <div class="form-line <?php echo $class['period_final'];?>">
                                 <?php echo $this->formElement($form->get('period_final')) . PHP_EOL;?>
                                 <?php echo $this->formLabel($form->get('period_final')) . PHP_EOL; ?>
                             </div>
@@ -58,7 +77,7 @@ $this->inlineScript()
                 </div>
                 <div class="row clearfix">
                     <div class="col-sm-12">
-                        <button type="submit" class="btn btn-default btn-lg waves-effect pull-right">Salvar</button>
+                        <button type="submit" class="btn bg-orange btn-lg waves-effect pull-right">SALVAR</button>
                     </div>
                 </div>
                 <?php echo $this->form()->closeTag() . PHP_EOL; ?>
