--- a/module/Application/view/application/campaign/index.phtml
+++ b/module/Application/view/application/campaign/index.phtml
@@ -1,30 +1,22 @@
-<?php
-    $title = 'Campanhas';
-?>
-
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="card">
             <div class="header">
-                <ul class="header-dropdown m-r--5">
-                    <li class="dropdown">
-                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">
-                            <i class="material-icons">more_vert</i>
-                        </a>
-                        <ul class="dropdown-menu pull-right">
-                            <li><a href="<?php echo $this->url('campaign/default', ['action' => 'add']);?>" class=" waves-effect waves-block">Adicionar</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <div class="row clearfix">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="btn-group btn-group-lg pull-right" role="group" aria-label="Large button group">
+                            <a href="<?php echo $this->url('campaign/default', ['action' => 'add']);?>" class="btn bg-orange waves-effect waves-block">ADICIONAR</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 <?php if (count($this->data) > 0) : ?>
             <div class="body table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Criado em</th>
-                            <th>Atualizado em</th>
+                            <th class="hidden-xs">Criado em</th>
+                            <th class="hidden-xs">Atualizado em</th>
                             <th>Nome</th>
                             <th class="text-right">Ações</th>
                         </tr>
@@ -32,13 +24,12 @@
                     <tbody>
 <?php   foreach ($this->data as $entity) :?>
                         <tr>
-                            <th scope="row">1</th>
                             <td class="hidden-xs"><?php echo $this->dateFormat($entity->getCreatedAt(), IntlDateFormatter::MEDIUM, IntlDateFormatter::SHORT, 'pt_BR');?></td>
                             <td class="hidden-xs"><?php echo $this->dateFormat($entity->getUpdatedAt(), IntlDateFormatter::MEDIUM, IntlDateFormatter::SHORT, 'pt_BR') ;?></td>
                             <td><?php echo $entity->getName();?></td>
                             <td>
                                 <div class="btn-group pull-right">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu">
