--- a/module/Application/view/application/campaign/index.phtml
+++ b/module/Application/view/application/campaign/index.phtml
@@ -1,3 +1,9 @@
+<?php
+$this->inlineScript()
+    ->prependFile($this->basePath('/assets/js/common/table.list.js'))
+    ->prependFile($this->basePath('/assets/bower_components/bootbox.js/bootbox.js'))
+;
+?>
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="card">
@@ -24,8 +30,8 @@
                     <tbody>
 <?php   foreach ($this->data as $entity) :?>
                         <tr>
-                            <td class="hidden-xs"><?php echo $this->dateFormat($entity->getCreatedAt(), IntlDateFormatter::MEDIUM, IntlDateFormatter::SHORT, 'pt_BR');?></td>
-                            <td class="hidden-xs"><?php echo $this->dateFormat($entity->getUpdatedAt(), IntlDateFormatter::MEDIUM, IntlDateFormatter::SHORT, 'pt_BR') ;?></td>
+                            <td class="hidden-xs" width="170"><?php echo $this->dateFormat($entity->getCreatedAt(), IntlDateFormatter::MEDIUM, IntlDateFormatter::SHORT, 'pt_BR');?></td>
+                            <td class="hidden-xs" width="170"><?php echo $this->dateFormat($entity->getUpdatedAt(), IntlDateFormatter::MEDIUM, IntlDateFormatter::SHORT, 'pt_BR') ;?></td>
                             <td><?php echo $entity->getName();?></td>
                             <td>
                                 <div class="btn-group pull-right">
@@ -33,8 +39,10 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a href="<?php echo $this->url('campaign/default', ['action' => 'edit', 'id' => $entity->getId()]);?>"><i class="material-icons">mode_edit</i> Editar</a></li>
-                                        <li><a href="javascript:void(0);" class="bt_action_confirm_delete" data-url="<?php echo $this->url('campaign/default', ['action' => 'delete', 'id' => $entity->getId()]);?>" data-object-delete="<?php echo $entity->getName();?>"><i class="material-icons">delete</i> Deletar</a></li>
+                                        <li>
+                                            <a href="javascript:void(0);" class="bt_action" data-url="<?php echo $this->url('campaign/default', ['action' => 'edit', 'id' => $entity->getId()]);?>"><i class="material-icons">mode_edit</i> Editar</a>
+                                            <a href="javascript:void(0);" class="bt_action_confirm_delete" data-url="<?php echo $this->url('campaign/default', ['action' => 'delete', 'id' => $entity->getId()]);?>" data-object-delete="<?php echo $entity->getName();?>"><i class="material-icons">delete</i> Deletar</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </td>
