--- a/module/Application/view/partials/navigation/breadcrumb.phtml
+++ b/module/Application/view/partials/navigation/breadcrumb.phtml
@@ -1,5 +1,10 @@
+<?php
+if (empty($this->pages)) {
+    return;
+}
+?>
 <!-- BEGIN BREADCRUMB -->
-<ol class="breadcrumb">
+<ol class="breadcrumb breadcrumb-bg-grey">
 <?php
     /**
      * @var  $key
