--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -102,22 +102,7 @@
                 <!-- Menu -->
                 <div class="menu">
                     <div class="slimScrollDiv">
-<?php
-/*    echo $this->navigation('navigation')
-        ->menu()
-        ->renderMenu(null, [
-            'maxDepth' => 1,
-            'ulClass' => 'list'
-        ])
-    ;*/
-?>
-<?php
-    echo $this->navigation('navigation')
-        ->menu()
-        ->setUlClass('list')
-        ->setMaxDepth(1)
-        ->setPartial('partials/navigation/menu');
-?>
+<?php echo $this->navigation('navigation')->menu()->setPartial('partials/navigation/menu'); ?>
                     </div>
                 </div>
                 <!-- #Menu -->
@@ -144,7 +129,7 @@
             <div class="container-fluid">
                 <div class="row clearfix">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-<?php echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/navigation/breadcrumb') . PHP_EOL; ?>
+<?php echo $this->navigation('navigation')->breadcrumbs()->setRenderInvisible(true)->setPartial('partials/navigation/breadcrumb') . PHP_EOL; ?>
 <?php echo $this->content . PHP_EOL; ?>
                     </div>
                 </div>
