--- a/module/Application/view/application/campaign/index.phtml
+++ b/module/Application/view/application/campaign/index.phtml
@@ -1,6 +1,9 @@
 <?php
 $this->inlineScript()
     ->prependFile($this->basePath('/assets/js/common/table.list.js'))
+;
+
+$this->headScript()
     ->prependFile($this->basePath('/assets/bower_components/bootbox.js/bootbox.js'))
 ;
 ?>
