--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -20,13 +20,13 @@
         <!-- BEGIN STYLESHEETS -->
         <?php
         echo $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath('/assets/images/favicon_pracacapital.png')])
+                ->appendStylesheet($this->basePath('/assets/css/style.css'))
                 ->prependStylesheet($this->basePath('/assets/bower_components/adminbsb-materialdesign/css/themes/theme-orange.min.css'))
-                ->prependStylesheet($this->basePath('/assets/css/style.css'))
                 ->prependStylesheet($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/animate-css/animate.min.css'))
                 ->prependStylesheet($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/node-waves/waves.min.css'))
-                ->prependStylesheet($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/bootstrap/css/bootstrap.min.css'))
-                ->prependStylesheet('https://fonts.googleapis.com/icon?family=Material+Icons')
                 ->prependStylesheet('https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext')
+                ->prependStylesheet('https://fonts.googleapis.com/icon?family=Material+Icons')
+                ->prependStylesheet($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/bootstrap/css/bootstrap.min.css'))
             . PHP_EOL;
         ?>
         <!-- END STYLESHEETS -->
@@ -34,9 +34,12 @@
         <!-- BEGIN JAVASCRIPT -->
         <?php
         echo $this->headScript()
-                ->appendFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/jquery/jquery.min.js'))
-                ->appendFile($this->basePath('/assets/js/common/respond.min.js'), 'text/javascript', ['conditional' => 'lt IE 9',])
-                ->appendFile($this->basePath('/assets/js/common/html5shiv.min.js'), 'text/javascript', ['conditional' => 'lt IE 9',])
+                ->prependFile($this->basePath('/assets/js/common/respond.min.js'), 'text/javascript', ['conditional' => 'lt IE 9',])
+                ->prependFile($this->basePath('/assets/js/common/html5shiv.min.js'), 'text/javascript', ['conditional' => 'lt IE 9',])
+                ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/jquery-slimscroll/jquery.slimscroll.min.js'))
+                ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/node-waves/waves.min.js'))
+                ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/bootstrap/js/bootstrap.min.js'))
+                ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/jquery/jquery.min.js'))
             . PHP_EOL;
         ?>
         <!-- END JAVASCRIPT -->
@@ -137,10 +140,7 @@
         </section>
 <?php
     echo $this->inlineScript()
-            ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/js/admin.js'))
-            ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/jquery-slimscroll/jquery.slimscroll.min.js'))
-            ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/node-waves/waves.min.js'))
-            ->prependFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/plugins/bootstrap/js/bootstrap.min.js'))
+            ->appendFile($this->basePath('/assets/bower_components/adminbsb-materialdesign/js/admin.js'))
         . PHP_EOL;
 ?>
     </body>
