--- a/module/Application/view/partials/navigation/breadcrumb.phtml
+++ b/module/Application/view/partials/navigation/breadcrumb.phtml
@@ -4,7 +4,7 @@ if (empty($this->pages)) {
 }
 ?>
 <!-- BEGIN BREADCRUMB -->
-<ol class="breadcrumb breadcrumb-bg-grey">
+<ol class="breadcrumb ">
 <?php
     /**
      * @var  $key
